# sb-sloka-counter

./: .travis.yml  CMakeLists.txt  Dockerfile-centos7-cmake2.8.12.2-gcc4.8.5  Dockerfile-ubuntu14-cmake2.8-gcc4.8  Dockerfile-ubuntu16-cmake3.5-gcc5.4  Dockerfile-ubuntu18-cmake3.10-gcc7.3  bhagpur.itx  build.sh  sb-itx-sloka-counter.cpp  sb-sloka-counter.cpp
rtf/: makefile  rtfactn.c  rtfactn.cpp  rtfdecl.h  rtfparser.h  rtfreadr.c  rtfreadr.cpp  rtftype.h
